_sass/_mailchimp.scss
/* Copyright (c) 2015 Bitcamp */

/* Dumping styles for mailchimp here. */
.mc_input {
  color: #000000;
  padding-left: 10px;
  height: 30px;
  border: none;
  font-family: 'avenir';
  max-width: 44vw;
  height: 40px;
}

.mc_button {
  margin-left: 5px;
  background-color: #FF6F3F;
  border: none;
  font-family: 'avenir';
  max-width: 42vw;
  height: 40px;
  padding-top: 4px;
}

.mc_button_inside {
  border: none;
  background: transparent;
  text-transform: uppercase;
  font-weight: 700;
}

.hidden {
  display: none;
}

.mc-div {
  margin: 25px 0 0 0;
}

